# lex-lambda

./: cdk.json  lex-lambda.code-workspace  pyproject.toml
app/lambda-app/: pyproject.toml
app/lambda-app/src/lambda_app/: bot.py  handler.py  util.py
app/lambda-app/tests/: events.json  test_event.py
app/lex-bot/: README.md  pyproject.toml
app/lex-bot/src/lex_bot/: __init__.py  bot.py  event.py  lex_event_schema.py  session.py
app/lex-bot/tests/: events.json  test_event_schema.py
docker/: lambda.Dockerfile
scripts/: crean_assets.sh
src/lex_lambda/: __init__.py  __main__.py  bot_def.py  stack.py
tests/: test_synth.py
