[project]
name = "lex-lambda"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Masaki Kobayashi", email = "bayashi.cl@gmail.com" }]
dependencies = ["aws-cdk-lib>=2.133.0", "lex-bot", "lambda-app"]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"lex-lambda" = "lex_lambda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["boto3>=1.34.84", "boto3-stubs[logs]>=1.34.84"]

[tool.rye.workspace]
members = ["app/*"]

[tool.rye.scripts]
clean = "scripts/crean_assets.sh"

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["src/lex_lambda"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ISC001", "COM812"]

[tool.pytest.ini_options]
norecursedirs = "cdk.out"
