[project]
name = "lambda-app"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Masaki Kobayashi", email = "bayashi.cl@gmail.com" }]
dependencies = ["lex-bot", "aws-lambda-powertools>=2.35.1", "pydantic>=2.6.4"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.1.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_app"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ISC001", "COM812", "TCH002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:pydantic.main"

[tool.mypy]
strict = true
