[project]
name = "lex-bot"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Masaki Kobayashi", email = "bayashi.cl@gmail.com" }]
dependencies = [
    "pydantic>=2.7.0",
    "jsonalias>=0.1.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "boto3>=1.34.88",
    "boto3-stubs[kendra]>=1.34.88",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lex_bot"]

[tool.ruff]
line-length = 120
